# DevOps_Agents

./: README.md  REPOSITORY_CLONING.md  deployment_config.yaml  deployment_docs.md  pyproject.toml  repository_analysis.yaml  sample.yaml  test-and-build-workflow.yml  test-and-build.yaml  workflows.yaml
src/new_latte/: crew.py  crew.py.back  example_clone_analysis.py  main.py  main.py.cred  main.py.noneed
src/new_latte/config/: agents.yaml  agents.yaml.21stjuly  agents.yaml.back  agents.yaml.backup  agents.yaml.max  agents.yaml.running  tasks.yaml  tasks.yaml.16thjuly  tasks.yaml.21stjuly  tasks.yaml.backup  tasks.yaml.backup_without_pytest  tasks.yaml.credentials  tasks.yaml.ec2_copy  tasks.yaml.running  tasks.yaml.yaml
src/new_latte/tools/: custom_tool.py
